# rust-xperiments

./: README.md
stm32-l412/: Cargo.toml  Embed.toml  README.md  memory.x
stm32-l412/.cargo/: config.toml
stm32-l412/src/: main.rs
